fix gap between hero and main menu

--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -1154,7 +1154,7 @@ btn+btn
 @media (max-width: 1259.98px) {
 	#skip-to-content {
 		transition: 0.5s cubic-bezier(0.19, 1, 0.19, 1);
-		margin-top: 117px;
+		margin-top: 103px;
 	}
 
 	.admin-bar #asuHeader {
